split into template

--- a/posters/Makefile
+++ b/posters/Makefile
@@ -1,14 +1,19 @@
-all := posters/tutorial
+all: posters/tutorial/tutorial.html
 
 css := base/base.css
 
 base/base.css: base/base.scss
-	npm run sass $^ $@
+	sass $^ $@
 
-posters/tutorial/tutorial.html: posters/tutorial/tutorial.jinja2 posters/tutorial/tutorial.css
-	./render $^ $@
+posters/tutorial/tutorial.html: posters/tutorial/tutorial.jinja2 base/base.jinja2 templates/mit/mit.jinja2 base/base.css
+	ln -fs ../../base posters/tutorial/base
+	ln -fs ../../figs posters/tutorial/figs
+	./render $< $@
 
-posters/tutorial/tutorial.css: base/base.css
-	ln -s $^ $@
+clean:
+	rm -f base/base.css*
+	rm -f posters/tutorial/tutorial.html
+	rm -f posters/tutorial/base
+	rm -f posters/tutorial/figs
 
-.PHONY: css
+.PHONY: css all
