add pdf generation script, some makefile refactoring

--- a/posters/Makefile
+++ b/posters/Makefile
@@ -1,29 +1,33 @@
-all: posters/tutorial/tutorial.html posters/sic-asplos23/sic-asplos23.html
+base_jinja := base/base.jinja2
+base_sass := base/base.scss
+RENDER := scripts/render
 
-templates/mit/mit.css: templates/mit/mit.scss base/base.scss
-	sass --load-path=. $< $@
+posters =
 
-templates/slice/slice.css: templates/slice/slice.scss base/base.scss
-	sass --load-path=. $< $@
+define poster
+posters/$1/index.css: posters/$1/index.scss templates/$2/$2.scss $(base_sass)
+	sass --load-path=. $$< $$@
 
-posters/tutorial/tutorial.html: posters/tutorial/tutorial.jinja2 base/base.jinja2 templates/mit/mit.jinja2 templates/mit/mit.css
-	ln -fs ../../templates/mit/mit.css posters/tutorial/index.css
-	ln -fs ../../figs posters/tutorial/figs
-	./render $< $@
+posters/$1/index.html: posters/$1/index.jinja2 templates/$2/$2.jinja2 $(base_jinja)
+	$(RENDER) $$< $$@
 
-posters/sic-asplos23/sic-asplos23.html: posters/sic-asplos23/sic-asplos23.jinja2 base/base.jinja2 templates/slice/slice.jinja2 templates/slice/slice.css
-	ln -fs ../../templates/slice/slice.css posters/sic-asplos23/index.css
-	ln -fs ../../figs posters/sic-asplos23/figs
-	./render $< $@
+$1: posters/$1/index.css posters/$1/index.html
+
+posters += $1
+endef
+
+$(eval $(call poster,tutorial,mit))
+$(eval $(call poster,sic-asplos23,slice))
+
+all: $(posters)
+
+define del
+rm -f $(1);
+endef
 
 clean:
-	rm -f base/base.css*
-	rm -f templates/mit/mit.css
-	rm -f templates/mit/mit.css.map
-	rm -f templates/slice/slice.css
-	rm -f templates/slice/slice.css.map
-	rm -f posters/tutorial/tutorial.html
-	rm -f posters/tutorial/index.css
-	rm -f posters/tutorial/figs
+	$(foreach p,$(posters),$(call del,posters/$(p)/index.css))
+	$(foreach p,$(posters),$(call del,posters/$(p)/index.css.map))
+	$(foreach p,$(posters),$(call del,posters/$(p)/index.html))
 
-.PHONY: css all
+.PHONY: all $(posters) clean
