--- a/posters/Makefile
+++ b/posters/Makefile
@@ -19,8 +19,9 @@ endef
 # Add posters here:
 # $(call poster,<poster name>,<template name>)
 $(eval $(call poster,tutorial,mit))
-$(eval $(call poster,sic-asplos23,slice))
-$(eval $(call poster,simcommand-oscar22,slice))
+$(eval $(call poster,2022-oscar-simcommand,slice))
+$(eval $(call poster,2023-slice_winter-cov_model,slice))
+$(eval $(call poster,2023-asplos-sic,slice))
 
 all: $(posters)
 
