add verif projects poster

--- a/posters/Makefile
+++ b/posters/Makefile
@@ -21,6 +21,7 @@ endef
 $(eval $(call poster,tutorial,mit))
 $(eval $(call poster,2022-oscar-simcommand,slice))
 $(eval $(call poster,2023-slice_winter-cov_model,slice))
+$(eval $(call poster,2023-slice_winter-verif_projects,slice))
 $(eval $(call poster,2023-asplos-sic,slice))
 
 all: $(posters)
