simcommand/chiseltest poster

--- a/posters/Makefile
+++ b/posters/Makefile
@@ -26,6 +26,7 @@ $(eval $(call poster,2023-slice_winter-verif_projects,slice))
 $(eval $(call poster,2023-asplos-sic,slice))
 $(eval $(call poster,2023-slice_summer-fuzzing,slice))
 $(eval $(call poster,2023-slice_summer-recipes,slice))
+$(eval $(call poster,2023-slice_summer-simcommand_chiseltest,slice))
 
 all: $(posters) posters/index.html
 
