add skeleton for rtl2graph poster

--- a/posters/Makefile
+++ b/posters/Makefile
@@ -27,6 +27,7 @@ $(eval $(call poster,2023-asplos-sic,slice))
 $(eval $(call poster,2023-slice_summer-fuzzing,slice))
 $(eval $(call poster,2023-slice_summer-recipes,slice))
 $(eval $(call poster,2023-slice_summer-simcommand_chiseltest,slice))
+$(eval $(call poster,2023-slice_summer-rtl2graph,slice))
 
 all: $(posters) posters/index.html
 
