--- a/talks/Makefile
+++ b/talks/Makefile
@@ -25,6 +25,7 @@ endef
 $(eval $(call talk,demo))
 $(eval $(call talk,2023-plarch_edsl))
 $(eval $(call talk,2023-plarch_mixed_hdl_and_hdl_design))
+$(eval $(call talk,2023_10-cs294-multi_level_sim_proposal))
 
 talks_output = $(addsuffix .html,$(talks))
 
