--- a/talks/package.json
+++ b/talks/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@fontsource/source-sans-pro": "^5.0.8",
+    "@fontsource/fira-sans": "^5.0.15",
     "reveal.js": "^4.5.0",
     "sass": "^1.68.0",
     "vite": "^4.3.2",
