--- a/talks/Makefile
+++ b/talks/Makefile
@@ -29,6 +29,7 @@ $(eval $(call talk,2023_10-cs294-multi_level_sim_proposal))
 $(eval $(call talk,2023_12-athlete_review-tidalsim_and_verif_apps))
 $(eval $(call talk,2023_12-cs294_tidalsim_final_talk))
 $(eval $(call talk,2024_01-quals-tidalsim,$(wildcard talks/quals/*.jinja2)))
+$(eval $(call talk,2024_01-slice_winter-tidalsim))
 
 talks_output = $(addsuffix .html,$(talks))
 
