tidalsim poster minus fn warmup

--- a/posters/Makefile
+++ b/posters/Makefile
@@ -29,6 +29,7 @@ $(eval $(call poster,2023-slice_summer-recipes,slice))
 $(eval $(call poster,2023-slice_summer-simcommand_chiseltest,slice))
 $(eval $(call poster,2023-slice_summer-rtl2graph,slice))
 $(eval $(call poster,2023-slice_summer-distpcsr,slice))
+$(eval $(call poster,2024-slice_winter-tidalsim,slice))
 
 all: $(posters) posters/index.html
 
