working on athlete update talk

--- a/talks/Makefile
+++ b/talks/Makefile
@@ -32,6 +32,7 @@ $(eval $(call talk,2024_01-quals-tidalsim,$(wildcard talks/quals/*.jinja2)))
 $(eval $(call talk,2024_01-slice_winter-tidalsim))
 $(eval $(call talk,2024_01-athlete-tidalsim))
 $(eval $(call talk,2024_02-uarch_event_tracing))
+$(eval $(call talk,2024_02-athlete-tidalsim_update))
 
 talks_output = $(addsuffix .html,$(talks))
 
