--- a/talks/package.json
+++ b/talks/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@fontsource/fira-sans": "^5.0.15",
     "@fontsource/source-sans-pro": "^5.0.8",
+    "@fontsource/fira-code": "^5.0.17",
     "reveal.js": "^4.5.0",
     "sass": "^1.68.0",
     "vite": "^4.5.1",
