intel tidalsim talk

--- a/talks/Makefile
+++ b/talks/Makefile
@@ -34,6 +34,7 @@ $(eval $(call talk,2024_01-athlete-tidalsim))
 $(eval $(call talk,2024_02-uarch_event_tracing))
 $(eval $(call talk,2024_02-athlete-tidalsim_update))
 $(eval $(call talk,2024_03-athlete_internal-tidalsim_apps))
+$(eval $(call talk,2024_03-intel-tidalsim_overview))
 
 talks_output = $(addsuffix .html,$(talks))
 
