--- a/talks/package.json
+++ b/talks/package.json
@@ -14,12 +14,13 @@
     "web": "https://vighneshiyer.com"
   },
   "devDependencies": {
-    "@fontsource/fira-sans": "^5.0.15",
-    "@fontsource/source-sans-pro": "^5.0.8",
+    "@fontsource/fira-sans": "^5.0.19",
     "@fontsource/fira-code": "^5.0.17",
+    "@fontsource/source-sans-pro": "^5.0.8",
     "reveal.js": "^5.0.5",
-    "sass": "^1.71.0",
-    "vite": "^5.1.5",
+    "highlight.js": "^11.9",
+    "sass": "^1.72.0",
+    "vite": "^5.2.7",
     "vite-plugin-run": "^0.5.1"
   }
 }
