--- a/talks/Makefile
+++ b/talks/Makefile
@@ -36,6 +36,7 @@ $(eval $(call talk,2024_02-athlete-tidalsim_update))
 $(eval $(call talk,2024_03-athlete_internal-tidalsim_apps))
 $(eval $(call talk,2024_03-intel-tidalsim_overview))
 $(eval $(call talk,2024_03-athlete-tidalsim_error_analysis))
+$(eval $(call talk,2024_04-latte-the_next_paradigm_of_hw_design))
 
 talks_output = $(addsuffix .html,$(talks))
 
