athlete talk sketch

--- a/talks/Makefile
+++ b/talks/Makefile
@@ -37,6 +37,7 @@ $(eval $(call talk,2024_03-athlete_internal-tidalsim_apps))
 $(eval $(call talk,2024_03-intel-tidalsim_overview))
 $(eval $(call talk,2024_04-athlete-tidalsim_error_analysis_and_caching))
 $(eval $(call talk,2024_04-latte-the_next_paradigm_of_hw_design))
+$(eval $(call talk,2024_04-athlete-tidalsim_overview))
 
 talks_output = $(addsuffix .html,$(talks))
 
