work on latte poster

--- a/posters/Makefile
+++ b/posters/Makefile
@@ -31,6 +31,7 @@ $(eval $(call poster,2023-slice_summer-rtl2graph,slice))
 $(eval $(call poster,2023-slice_summer-distpcsr,slice))
 $(eval $(call poster,2024-slice_winter-tidalsim,slice))
 $(eval $(call poster,2024-slice_summer-tidalsim,slice))
+$(eval $(call poster,2024-slice_summer-next_paradigm,slice))
 
 all: $(posters) posters/index.html
 
